--- a/assets/scss/partials/_page.scss
+++ b/assets/scss/partials/_page.scss
@@ -54,6 +54,7 @@
 
         i {
             margin: 13px;
+            font-size: 1.6rem;
             width: 16px;
             line-height: 16px;
             display: block;
